# csubb

./: README.md
..bfg-report/2024-11-05/14-39-43/: cache-stats.txt  deleted-files.txt  object-id-map.old-new.txt
python projects/Lab9/: main.py
python projects/Lab9/data/: students.txt
python projects/Lab9/domain/: notare.py  student.py  validare.py
python projects/Lab9/service/: service_problema.py
python projects/PracticFP/: main.py
python projects/PracticFP/data/: melodii.txt
python projects/PracticFP/tests/: repo_test.py  service_tests.py  test.txt
python projects/PracticFP/ui/: consola.py
python projects/Simulare FP/: main.py
python projects/Simulare FP/data/: jucatori.txt
python projects/Simulare FP/domain/: MVPCandidate.py
python projects/Simulare FP/repository/: jucator_repo.py  mvp_repo.py
python projects/Simulare FP/tests/: repo_tests.py
python projects/Simulare FP/utils/: file_utils.py
sem1/Lab9/data/: problems.txt
sem1/Lab9/domain/: problema.py
sem1/Lab9/repository/: memory_repository_nota.py  memory_repository_student.py
sem1/Lab9/service/: serivice_student.py  service_nota.py
sem1/Lab9/ui/: consola.py
sem1/PracticFP/domain/: melodie.py  validare.py
sem1/PracticFP/service/: melodie_service.py
semestrul 2/OOP/LAB8-9/: CMakeLists.txt  cosOferte.cpp  cosOferte.h  errors.h  oferte.txt  repo.h  service.cpp  service.h  test.txt  teste.cpp  ui.cpp
semestrul 2/OOP/undo--alex vladu/: CMakeLists.txt  array.c  array.h  controller.c  controller.h  domain.c  domain.h  info.txt  main.c  repository.c  repository.h  ui.c  ui.h  validator.c  validator.h
semestrul 2/SO/: SO lab2.txt  SO seminar 3.txt  VMware Workstation 17 Player.lnk  idei.txt  notite_procese.txt  notite_shell.txt  notite_threads.txt
semestrul 2/Sisteme Dinamice/: lab5.mw  lab5.mw.sav  test_SD.mw
semestrul 2/sda/lab1/: CMakeLists.txt
semestrul 2/sda/lab1/Proiect C++/Proiect C++/: Matrice.cpp  Matrice.h
semestrul 2/sda/lab1/Teste/Teste/: TestExtins.cpp  TestScurt.cpp
semestrul 2/sda/lab6--sda--bun/: CMakeLists.txt
semestrul 2/sda/lab6--sda--bun/Colectie/: Colectie.cpp  Colectie.h  IteratorColectie.cpp  IteratorColectie.h
semestrul 2/sda/lab6--sda--bun/Teste/: TestExtins.cpp  TestScurt.cpp
semestrul 2/sda/lab7--sda/: CMakeLists.txt
semestrul 2/sda/lab7--sda/TAD Dictionar Ordonat/Proiect C++/: DO.cpp  DO.h  Iterator.cpp  Iterator.h
semestrul 2/sda/lab7--sda/TAD Dictionar Ordonat/Teste/: TestExtins.cpp  TestScurt.cpp
semestrul 3/Baze de date/: lab1.sql  lab2.sql  lab3.sql  lab4-testare.sql  lab5.sql  notite.sql  rez_sub1.sql  samsara.sql
semestrul 3/Engleza/: proiect engleza.docx
semestrul 3/Retele/: 17--PRACTIC.txt
semestrul 4/iss/: diagrama usecase.mdj
semestrul 4/mpp/: lab1.mdj
(+651 files in other folders)
