cmake_minimum_required(VERSION 3.27)
project(LAB6)

set(CMAKE_CXX_STANDARD 17)

add_executable(LAB6 main.cpp
        domain.cpp
        domain.h
        repo.cpp
        repo.h
        service.cpp
        service.h
        ui.cpp
        ui.h
        validator.h
        validator.cpp
        errors.h
        teste.cpp
        teste.h
        utils.cpp
        utils.h
        cosOferte.h
        cosOferte.cpp
        undo.h
        undo.h)
